# English-Bot

./: .env_example  .gitignore  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3a8b00c19ea1_add_google_oath_2_0_via_openid.py  8a6b31f71ef4_fix_refresh_token_expiry_and_add_.py  c020ed409e14_initial_tables.py  e566ee96e4ce_add_authentication_via_google_oauth_2_0.py  e588f66d558b_update_models_add_model_refreshtoken.py
backend/src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/src/auth/: __init__.py  cookies.py  security.py  tokens.py
backend/src/database/: __init__.py  config_db.py  models.py  repository.py  unitofwork.py
backend/src/interfaces/: __init__.py  auth_service.py  redis_auth_state.py  repository.py  unitofwork.py
backend/src/redis/: __init__.py  auth_state.py  config_redis.py
backend/src/routers/: __init__.py  auth.py  dependencies.py
backend/src/routers/schemas/: __init__.py  auth.py
backend/src/schemas/: __init__.py  auth.py
backend/src/service/: __init__.py  auth.py
backend/src/tasks/: __init__.py  celery_config.py  schedule.py
backend/src/tasks/jobs/: __init__.py  token_cleanup.py
