[project]
name = "english-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.0",
    "google-auth>=2.38.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "redis>=7.2.1",
    "celery>=5.6.2",
    "aiohttp>=3.13.3",
    "google>=3.0.0",
    "requests>=2.32.0",
]
